--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "connect-flash-examples-express3",
   "version": "0.0.0",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
