--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "connect-flash": "^0.1.1",
+    "connect-flash-plus": "^0.2.1",
     "ejs": "2.5.x",
     "express": "3.x.x",
     "request": "^2.88.0"
